--- a/Last Api.csproj
+++ b/Last Api.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="RepoDb.PostgreSql" Version="1.13.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="8.1.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.11.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="xunit" Version="2.9.3" />
