--- a/Last Api.csproj
+++ b/Last Api.csproj
@@ -7,6 +7,7 @@
     <RootNamespace>Last_Api</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
+    <SonarQubeTestProject>false</SonarQubeTestProject>
   </PropertyGroup>
 
   <ItemGroup>
